Upgrade Sonar dependencies Corrects tests Change Logger
Delete code for older SonarQube version
https://sonarsource.atlassian.net/browse/SONAR-11064